Fix horizontal overflow caused by Popover

--- a/src/components/core/Layout.module.css
+++ b/src/components/core/Layout.module.css
@@ -3,14 +3,16 @@
   flex-flow: row wrap;
   justify-content: space-between;
   margin: auto;
+  overflow: hidden;
 }
 
 .content {
-  /* flex: 1 1 0; */
+  flex: 1 1 0;
   position: relative;
   max-width: 1600px;
   min-width: 0;
   margin: auto;
+  overflow: hidden;
   
   @media screen and (min-width: calc(1600px + 250px)) {
     border-left: 1px solid var(--gray-1);
@@ -37,7 +39,7 @@
     flex: 1 1 0;
     display: flex;
     align-items: center;
-    padding: 0 80px;
+    padding: 0 min(5vw, 80px);
     border-left: 1px solid var(--gray-2);
   }
 }
@@ -63,12 +65,13 @@
   background-color: var(--background);
   border-bottom: 1px solid var(--gray-2);
   border-right: 1px solid var(--gray-1);
-  height: 80px;
+  height: min(5vw, 80px);
 }
 
 .section {
   position: relative;
   background-color: var(--background);
+  overflow: hidden;
   
   .section-content {
     display: flex;
@@ -81,7 +84,8 @@
   background-color: var(--background);
   border-right: 1px solid var(--gray-1);
   border-bottom: 1px solid var(--gray-1);
-  padding: 80px;
-  min-width: 300px;
+  padding: min(5vw, 80px);
+  min-width: 280px;
+  box-sizing: content-box;
   overflow: hidden;
 }
